--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "generate-password": "^1.7.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "socket.io": "^4.5.3"
   },
   "devDependencies": {
